Fix dropdown size and alignment

--- a/app/styles/views/_quick-jump.scss
+++ b/app/styles/views/_quick-jump.scss
@@ -106,6 +106,7 @@
       @extend %dropdown;
 
       text-align: left;
+      min-width: rem-calc(150px);
     }
   }
 
